--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -4,6 +4,8 @@ article {
 	text-align: center;
 	background: #0F0D0D;
     position: relative;
+    
+    // div z tą klasą został zakomentowany w index.html!
     .block {
         width: 6%;
         height: 3.5%;
@@ -17,12 +19,12 @@ article {
 }
 
 .info {
-    width: 60vw;
-    height: 60vh;
-    min-width: 300px;
+    // width: 100%;
+    // height: 60vh;
+    // min-width: 300px;
     // border: 4px solid #F2E6E8;
     font-size: 1.8em;
-    display: flex;
+    // display: flex;
     align-items: center;
     // justify-content: center;
     // Centrowanie:
@@ -36,9 +38,8 @@ article {
     div:first-child {
         line-height: 2.1em;
         font-size: 2.1em;
-        display: block;
-        margin: auto;
-        width: 100%;
+        // margin: auto;
+        // width: 100%;
     }
     div:last-child {
         display: block;
