--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -48,31 +48,26 @@ article {
     transform: translate(-50%, -50%); }
 
 .info {
-  width: 70%;
-  height: 70%;
+  width: 60vw;
+  height: 60vh;
   min-width: 300px;
-  border: 4px solid #F2E6E8;
   font-size: 1.8em;
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
-  text-align: center; }
-  .info span {
+  margin: auto; }
+  .info div:first-child {
+    line-height: 2.1em;
     font-size: 2.1em;
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%); }
-  .info p {
-    position: absolute;
-    top: 53%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%); }
+    display: block;
+    margin: auto;
+    width: 100%; }
+  .info div:last-child {
+    display: block; }
 
 footer {
   height: 8vh;
@@ -83,4 +78,3 @@ footer {
     footer ul li {
       text-align: right;
       padding: 1% 15% 1% 0; }
-
